# beads-ui

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
backend/: index.js  package.json
benchmark/canix-app/: .env.example  README.md  package-lock.json  package.json
benchmark/canix-app-rust/: .env.example  Cargo.toml  PLAN.md
benchmark/canix-app-rust/src/: errors.rs  main.rs
benchmark/canix-app-rust/src/auth/: jwt.rs  middleware.rs  password.rs
benchmark/canix-app-rust/src/db/: mod.rs
benchmark/canix-app-rust/src/models/: mod.rs
benchmark/canix-app-rust/src/routes/: auth.rs  mod.rs
benchmark/canix-app/public/: 404.html  admin-dashboard.html  client-dashboard.html  employe-dashboard.html  employee-dashboard.html  login.html
benchmark/canix-app/public/admin/: dashboard.html  quotes.html  tickets.html
benchmark/canix-app/public/client/: quotes.html
benchmark/canix-app/public/employee/: quotes.html  tickets.html
benchmark/canix-app/server/: index.js
benchmark/canix-app/server/db/: migrate.js  seed.js
benchmark/canix-app/server/middleware/: auth.js
benchmark/canix-app/tests/: auth.test.js  quotes.test.js  tickets.test.js
benchmark/canix-site/: README.md  about.html  contact.html  index.html  services.html
benchmark/canix-site/css/: base.css  responsive.css  typography.css
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ConvoyStudio.jsx  DoctorTab.jsx  LiveTerminal.jsx  MapRoom.jsx  MergeQueue.jsx  TimeTravelSlider.jsx  TooltipHelp.jsx
(+8 files in other folders)
